--- a/project/src/components/Dashboard/Navigation/SideNavigation/NavigationContainer.module.css
+++ b/project/src/components/Dashboard/Navigation/SideNavigation/NavigationContainer.module.css
@@ -1,9 +1,9 @@
 .oracle-cloak-nav {
     width: 280px;
     background-color: #3d3c3c;
-    height: 100vh;
+    height: 90vh;
     position: fixed;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .oracle-cloak-nav--inner{
