--- a/project/src/components/Dashboard/Navigation/TopNavigation/MainNavigation.module.css
+++ b/project/src/components/Dashboard/Navigation/TopNavigation/MainNavigation.module.css
@@ -1,3 +1,38 @@
-.oracle-main--nav{
-
+.oracle-main--nav {
+    height: 10vh;
+    background-color: #2f2f2f;
+    display: flex;
+    align-items: center;
 }
+
+.oracle-main--nav__brand {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    min-width: 300px;
+    justify-content: space-evenly;
+}
+
+.oracle-main--nav__hamburger {
+    display: flex;
+    flex-direction: column;
+}
+
+.oracle-main--nav__hamburger span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+
+    background: #ffffff;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
+}
+
