Retrieving data from API
There are multiple ways to retrieve user. So far I came across two options (loadUserProfile in Home.jsx and init with parsedToken in Auth.jsx). Today I need to redesign Key Cloak's login page and then find the solution how to stay in session on Dashboard as well on how to retrieve real role data. I might find some help here: https://stackoverflow.com/questions/40285305/get-roles-of-logged-in-user-in-keycloak

--- a/project/src/components/Dashboard/Navigation/SideNavigation/NavigationContainer.module.css
+++ b/project/src/components/Dashboard/Navigation/SideNavigation/NavigationContainer.module.css
@@ -2,7 +2,7 @@
     width: 280px;
     background-color: #3d3c3c;
     height: 90vh;
-    position: fixed;
+    display: block;
     overflow-y: auto;
 }
 
