--- a/project/src/components/utils/Button/Button.module.css
+++ b/project/src/components/utils/Button/Button.module.css
@@ -4,6 +4,7 @@
     border-radius: 0.4rem;
     border: 1px solid black;
     color: black;
+    text-decoration: none;
 }
 
 .button-green{
@@ -12,4 +13,5 @@
     padding: 0.4rem 1rem;
     border-radius: 0.4rem;
     color: white;
+    text-decoration: none;
 }
